# gesture_interaction

./: CMakeLists.txt  README.md  package.xml
include/gesture_interaction/: actuators_control.h  fc_call_node.h
include/gesture_legs_control/: RobotLegs.h  WS2812B.h  actuators_control.h  fc_call_node.h  gesture_control_node.h  gpio_py.hpp
launch/: gesture_interaction.launch.py  gesture_legs_control.launch.py
src/: RobotLegs.cpp  actuators_control.cpp  fc_call_node.cpp  gesture_control_node.cpp  main.cpp
