<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gesture_legs_control</name>
  <version>1.0.0</version>
  <description>gesture_legs_control</description>
  <maintainer email="847005649@qq.com">nuo.wu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>ai_msgs</depend>
  <depend>lighting_control</depend>

  <exec_depend>hand_gesture_detection</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
